--- a/src/features/products/components/ImageSlider/index.module.scss
+++ b/src/features/products/components/ImageSlider/index.module.scss
@@ -4,28 +4,27 @@
   width: $spacing-128;
   height: $spacing-128;
 
+  user-select: none;
+
   overflow: hidden;
 
   margin-right: $spacing-24;
-}
 
-.tablet-classes {
-  @include xm-tablets {
-    object-fit: contain !important;
+  .preshow-image__img {
+    object-fit: cover;
+    user-select: none;
   }
 }
 
 .preshow-images-box {
+  user-select: none;
   display: flex;
-
   cursor: pointer;
-
   margin: $spacing-24 0;
-
   max-width: 550px;
 }
 
-.main-image-box {
+.img-box {
   cursor: pointer;
 
   max-width: 550px;
@@ -34,6 +33,10 @@
   position: relative;
 
   transition: all 0.5s ease-in;
+
+  .img-box__img {
+    object-fit: cover;
+  }
 
   @include tablets {
     height: 480px;
@@ -49,8 +52,6 @@
     width: 100%;
     max-width: 100%;
 
-    height: 600px;
-
     border: 1px solid $cl-text;
   }
 }
@@ -64,12 +65,23 @@
   transform: translate(0, -50%);
   z-index: 2;
 
-  font-size: $font-size-44;
-  background-color: transparent;
+  background-color: $cl-background;
 
   color: rgba($color: $cl-text, $alpha: 0.8);
 
+  height: 28px;
+  width: 28px;
+
+  border-radius: 50px;
+
   cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding: 0;
 }
 
 .right-arrow {
@@ -81,12 +93,36 @@
   transform: translate(0, -50%);
   z-index: 2;
 
-  font-size: $font-size-44;
-  background-color: transparent;
+  background-color: $cl-background;
 
   color: rgba($color: $cl-text, $alpha: 0.8);
 
+  height: 28px;
+  width: 28px;
+
+  border-radius: 50%;
+
   cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding: 0;
+}
+
+.arrow {
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
+
+  font-size: $font-size-24;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dots-box {
