--- a/src/features/products/components/ImageSlider/index.module.scss
+++ b/src/features/products/components/ImageSlider/index.module.scss
@@ -117,7 +117,7 @@
   height: 100%;
 
   border-radius: 50%;
-
+  font-weight: $fw-600;
   font-size: $font-size-24;
   text-align: center;
   display: flex;
