--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -67,7 +67,7 @@ $font-lineHeight-4: 1.2;
 
 // Font families
 $font-type-text: 'Courier Prime', monospace;
-$font-type-title: 'Lexend Zetta', sans-serif;
+$font-type-title: Arial;
 
 // container sizes
 $h-container-navbar: 8vh;
