--- a/src/components/UI/Navbar/Navbar.module.scss
+++ b/src/components/UI/Navbar/Navbar.module.scss
@@ -1,5 +1,11 @@
 @import '@theme';
 
+.navbar {
+  width: 100%;
+
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
