feat: adding order to list of products

--- a/src/features/products/components/Filters/index.module.scss
+++ b/src/features/products/components/Filters/index.module.scss
@@ -1,7 +1,12 @@
 @import '@theme';
 
 .container {
+  display: inline-block;
   padding: $spacing-32 0;
+
+  @include mobiles {
+    padding: $spacing-16 0;
+  }
 }
 
 .filter-text {
