--- a/src/components/UI/LineDropdown/index.module.scss
+++ b/src/components/UI/LineDropdown/index.module.scss
@@ -3,19 +3,14 @@
 .dropdown {
   display: inline;
   position: relative;
-
-  z-index: 9;
 }
 
 .trigger-button {
   cursor: pointer;
   padding: $spacing-12;
-
-  min-width: $screen-xm;
-  background-color: $cl-text;
-  color: $cl-background;
-
+  text-decoration: underline;
   font-size: $font-size-16;
+  font-weight: 600;
   border: none;
 }
 
@@ -30,7 +25,8 @@
   margin: 0;
 
   border: 1px solid grey;
-  width: $screen-xm;
+
+  z-index: 9;
 }
 
 .menu > li {
