fix: currency formating and pagenotfount sizes

--- a/src/features/error/components/Error/PageNotFound/index.module.scss
+++ b/src/features/error/components/Error/PageNotFound/index.module.scss
@@ -1,7 +1,7 @@
 @import '@theme';
 
 .error-container {
-  height: $h-container-content;
+  height: 100vh;
 
   display: flex;
   flex-direction: column;
