--- a/src/components/UI/Separator/Separator.module.scss
+++ b/src/components/UI/Separator/Separator.module.scss
@@ -1,22 +1,34 @@
 @import '@theme';
 
-.svg-ghost {
-  width: $spacing-32;
-  height: $spacing-32;
-
-  fill: $cl-text;
-
-  margin: 0 $spacing-96;
-}
-
-.separator-box {
+.separator {
   margin: $spacing-96 0;
   width: 100%;
   padding: $spacing-32;
-}
 
-.separator-box-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .separator__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .separator__ul {
+    list-style: none;
+    font-size: $font-size-18;
+    text-align: center;
+
+    li,
+    a {
+      margin: $spacing-12 0;
+      color: $cl-text;
+    }
+  }
+
+  .separator__ghost {
+    width: $spacing-32;
+    height: $spacing-32;
+
+    fill: $cl-text;
+
+    margin: 0 $spacing-96;
+  }
 }
