--- a/src/features/products/components/ImageSlider/index.module.scss
+++ b/src/features/products/components/ImageSlider/index.module.scss
@@ -24,6 +24,47 @@
   max-width: 550px;
 }
 
+.wrapper {
+  width: 100%;
+
+  position: relative;
+}
+
+.carousel {
+  height: 500px;
+  width: 100%;
+  max-width: 100vw;
+
+  overflow: hidden;
+
+  .carousel__container {
+    white-space: nowrap;
+
+    scroll-behavior: smooth;
+
+    height: 100%;
+    width: 100%;
+  }
+
+  .carousel__container.dragging {
+    scroll-behavior: auto;
+    cursor: grab;
+  }
+
+  .carousel__container__img {
+    object-fit: cover;
+
+    width: 100%;
+    height: 100%;
+
+    margin-left: $spacing-16;
+  }
+
+  .carousel__container__img:first-child {
+    margin-left: 0;
+  }
+}
+
 .img-box {
   cursor: pointer;
 
